@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,11 +17,11 @@
 package org.springframework.beans.factory.aot;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.stream.Stream;
 
 import javax.lang.model.element.Modifier;
 
@@ -31,10 +31,16 @@ import org.springframework.aot.generate.ClassNameGenerator;
 import org.springframework.aot.generate.GenerationContext;
 import org.springframework.aot.generate.MethodReference;
 import org.springframework.aot.generate.MethodReference.ArgumentCodeGenerator;
+import org.springframework.aot.generate.ValueCodeGenerationException;
 import org.springframework.aot.test.generate.TestGenerationContext;
+import org.springframework.beans.factory.aot.BeanRegistrationsAotContribution.Registration;
 import org.springframework.beans.factory.support.DefaultListableBeanFactory;
 import org.springframework.beans.factory.support.RegisteredBean;
 import org.springframework.beans.factory.support.RootBeanDefinition;
+import org.springframework.beans.testfixture.beans.AgeHolder;
+import org.springframework.beans.testfixture.beans.Employee;
+import org.springframework.beans.testfixture.beans.ITestBean;
+import org.springframework.beans.testfixture.beans.NestedTestBean;
 import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.beans.testfixture.beans.factory.aot.MockBeanFactoryInitializationCode;
 import org.springframework.core.test.io.support.MockSpringFactoriesLoader;
@@ -47,7 +53,10 @@ import org.springframework.javapoet.MethodSpec;
 import org.springframework.javapoet.ParameterizedTypeName;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.springframework.beans.factory.aot.BeanRegistrationsAotContribution.Registration;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.mockito.BDDMockito.then;
+import static org.mockito.Mockito.mock;
+import static org.springframework.aot.hint.predicate.RuntimeHintsPredicates.reflection;
 
 /**
  * Tests for {@link BeanRegistrationsAotContribution}.
@@ -55,36 +64,26 @@ import static org.springframework.beans.factory.aot.BeanRegistrationsAotContribu
  * @author Phillip Webb
  * @author Sebastien Deleuze
  * @author Stephane Nicoll
+ * @author Brian Clozel
  */
 class BeanRegistrationsAotContributionTests {
 
-	private final DefaultListableBeanFactory beanFactory;
+	private final DefaultListableBeanFactory beanFactory = new DefaultListableBeanFactory();
 
-	private final BeanDefinitionMethodGeneratorFactory methodGeneratorFactory;
+	private final BeanDefinitionMethodGeneratorFactory methodGeneratorFactory = new BeanDefinitionMethodGeneratorFactory(
+			AotServices.factoriesAndBeans(new MockSpringFactoriesLoader(), this.beanFactory));
 
-	private TestGenerationContext generationContext;
+	private TestGenerationContext generationContext = new TestGenerationContext();
 
-	private MockBeanFactoryInitializationCode beanFactoryInitializationCode;
-
-
-	BeanRegistrationsAotContributionTests() {
-		MockSpringFactoriesLoader springFactoriesLoader = new MockSpringFactoriesLoader();
-		this.beanFactory = new DefaultListableBeanFactory();
-		this.methodGeneratorFactory = new BeanDefinitionMethodGeneratorFactory(
-				AotServices.factoriesAndBeans(springFactoriesLoader, this.beanFactory));
-		this.generationContext = new TestGenerationContext();
-		this.beanFactoryInitializationCode = new MockBeanFactoryInitializationCode(this.generationContext);
-	}
+	private MockBeanFactoryInitializationCode beanFactoryInitializationCode = new MockBeanFactoryInitializationCode(this.generationContext);
 
 
 	@Test
 	void applyToAppliesContribution() {
-		RegisteredBean registeredBean = registerBean(
-				new RootBeanDefinition(TestBean.class));
-		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
-				this.methodGeneratorFactory, registeredBean, null,
-				Collections.emptyList());
-		BeanRegistrationsAotContribution contribution = createContribution(generator);
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(registeredBean, generator);
 		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
 		compile((consumer, compiled) -> {
 			DefaultListableBeanFactory freshBeanFactory = new DefaultListableBeanFactory();
@@ -95,12 +94,10 @@ class BeanRegistrationsAotContributionTests {
 
 	@Test
 	void applyToAppliesContributionWithAliases() {
-		RegisteredBean registeredBean = registerBean(
-				new RootBeanDefinition(TestBean.class));
-		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
-				this.methodGeneratorFactory, registeredBean, null,
-				Collections.emptyList());
-		BeanRegistrationsAotContribution contribution = createContribution(generator, "testAlias");
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(registeredBean, generator, "testAlias");
 		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
 		compile((consumer, compiled) -> {
 			DefaultListableBeanFactory freshBeanFactory = new DefaultListableBeanFactory();
@@ -114,12 +111,10 @@ class BeanRegistrationsAotContributionTests {
 		this.generationContext = new TestGenerationContext(
 				new ClassNameGenerator(TestGenerationContext.TEST_TARGET, "Management"));
 		this.beanFactoryInitializationCode = new MockBeanFactoryInitializationCode(this.generationContext);
-		RegisteredBean registeredBean = registerBean(
-				new RootBeanDefinition(TestBean.class));
-		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
-				this.methodGeneratorFactory, registeredBean, null,
-				Collections.emptyList());
-		BeanRegistrationsAotContribution contribution = createContribution(generator);
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(registeredBean, generator);
 		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
 		compile((consumer, compiled) -> {
 			SourceFile sourceFile = compiled.getSourceFile(".*BeanDefinitions");
@@ -130,27 +125,208 @@ class BeanRegistrationsAotContributionTests {
 	@Test
 	void applyToCallsRegistrationsWithBeanRegistrationsCode() {
 		List<BeanRegistrationsCode> beanRegistrationsCodes = new ArrayList<>();
-		RegisteredBean registeredBean = registerBean(
-				new RootBeanDefinition(TestBean.class));
-		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(
-				this.methodGeneratorFactory, registeredBean, null,
-				Collections.emptyList()) {
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of()) {
 
 			@Override
-			MethodReference generateBeanDefinitionMethod(
-					GenerationContext generationContext,
+			MethodReference generateBeanDefinitionMethod(GenerationContext generationContext,
 					BeanRegistrationsCode beanRegistrationsCode) {
 				beanRegistrationsCodes.add(beanRegistrationsCode);
-				return super.generateBeanDefinitionMethod(generationContext,
-						beanRegistrationsCode);
+				return super.generateBeanDefinitionMethod(generationContext, beanRegistrationsCode);
 			}
 
 		};
-		BeanRegistrationsAotContribution contribution = createContribution(generator);
+		BeanRegistrationsAotContribution contribution = createContribution(registeredBean, generator);
 		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
 		assertThat(beanRegistrationsCodes).hasSize(1);
 		BeanRegistrationsCode actual = beanRegistrationsCodes.get(0);
 		assertThat(actual.getMethods()).isNotNull();
+	}
+
+	@Test
+	void applyToRegisterReflectionHints() {
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(Employee.class));
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(registeredBean, generator);
+		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
+		assertThat(reflection().onType(Employee.class))
+				.accepts(this.generationContext.getRuntimeHints());
+		assertThat(reflection().onType(ITestBean.class))
+				.accepts(this.generationContext.getRuntimeHints());
+		assertThat(reflection().onType(AgeHolder.class))
+				.accepts(this.generationContext.getRuntimeHints());
+	}
+
+	@Test
+	void applyToFailingDoesNotWrapAotException() {
+		RootBeanDefinition beanDefinition = new RootBeanDefinition(TestBean.class);
+		beanDefinition.setInstanceSupplier(TestBean::new);
+		RegisteredBean registeredBean = registerBean(beanDefinition);
+
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(registeredBean, generator, "testAlias");
+		assertThatExceptionOfType(AotProcessingException.class)
+				.isThrownBy(() -> contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode))
+				.withMessage("Error processing bean with name 'testBean': instance supplier is not supported")
+				.withNoCause();
+	}
+
+	@Test
+	void applyToFailingWrapsValueCodeGeneration() {
+		RootBeanDefinition beanDefinition = new RootBeanDefinition(TestBean.class);
+		beanDefinition.getPropertyValues().addPropertyValue("doctor", new NestedTestBean());
+		RegisteredBean registeredBean = registerBean(beanDefinition);
+
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of());
+		BeanRegistrationsAotContribution contribution = createContribution(registeredBean, generator, "testAlias");
+		assertThatExceptionOfType(AotProcessingException.class)
+				.isThrownBy(() -> contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode))
+				.withMessage("Error processing bean with name 'testBean': failed to generate code for bean definition")
+				.havingCause().isInstanceOf(ValueCodeGenerationException.class)
+				.withMessageContaining("Failed to generate code for")
+				.withMessageContaining(NestedTestBean.class.getName());
+	}
+
+	@Test
+	void applyToFailingProvidesDedicatedException() {
+		RegisteredBean registeredBean = registerBean(new RootBeanDefinition(TestBean.class));
+
+		BeanDefinitionMethodGenerator generator = new BeanDefinitionMethodGenerator(this.methodGeneratorFactory,
+				registeredBean, null, List.of()) {
+			@Override
+			MethodReference generateBeanDefinitionMethod(GenerationContext generationContext,
+					BeanRegistrationsCode beanRegistrationsCode) {
+				throw new IllegalStateException("Test exception");
+			}
+		};
+		BeanRegistrationsAotContribution contribution = createContribution(registeredBean, generator, "testAlias");
+		assertThatExceptionOfType(AotProcessingException.class)
+				.isThrownBy(() -> contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode))
+				.withMessage("Error processing bean with name 'testBean': failed to generate code for bean definition")
+				.havingCause().isInstanceOf(IllegalStateException.class).withMessage("Test exception");
+	}
+
+	@Test
+	void applyToWithLessThanAThousandBeanDefinitionsDoesNotCreateSlices() {
+		BeanRegistrationsAotContribution contribution = createContribution(999, i -> "testBean" + i);
+		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
+		compile((consumer, compiled) -> {
+			assertThat(compiled.getSourceFile(".*BeanFactoryRegistrations"))
+					.doesNotContain("Register the bean definitions from 0 to 999.",
+							"// Registration is sliced to avoid exceeding size limit");
+			DefaultListableBeanFactory freshBeanFactory = new DefaultListableBeanFactory();
+			consumer.accept(freshBeanFactory);
+			for (int i = 0; i < 999; i++) {
+				String beanName = "testBean" + i;
+				assertThat(freshBeanFactory.containsBeanDefinition(beanName)).isTrue();
+				assertThat(freshBeanFactory.getBean(beanName)).isInstanceOf(TestBean.class);
+			}
+			assertThat(freshBeanFactory.getBeansOfType(TestBean.class)).hasSize(999);
+		});
+	}
+
+	@Test
+	void doWithSliceWithOnlyLessThanOneSlice() {
+		List<Registration> registration = Stream.generate(() -> mock(Registration.class)).limit(10).toList();
+		BiConsumer<Integer, Integer> sliceAction = mockSliceAction();
+		Registration.doWithSlice(registration, 20, sliceAction);
+		then(sliceAction).should().accept(0, 10);
+		then(sliceAction).shouldHaveNoMoreInteractions();
+	}
+
+	@Test
+	void doWithSliceWithOnlyOneExactSlice() {
+		List<Registration> registration = Stream.generate(() -> mock(Registration.class)).limit(20).toList();
+		BiConsumer<Integer, Integer> sliceAction = mockSliceAction();
+		Registration.doWithSlice(registration, 20, sliceAction);
+		then(sliceAction).should().accept(0, 20);
+		then(sliceAction).shouldHaveNoMoreInteractions();
+	}
+
+	@Test
+	void doWithSeveralSlices() {
+		List<Registration> registration = Stream.generate(() -> mock(Registration.class)).limit(20).toList();
+		BiConsumer<Integer, Integer> sliceAction = mockSliceAction();
+		Registration.doWithSlice(registration, 7, sliceAction);
+		then(sliceAction).should().accept(0, 7);
+		then(sliceAction).should().accept(7, 14);
+		then(sliceAction).should().accept(14, 20);
+		then(sliceAction).shouldHaveNoMoreInteractions();
+	}
+
+	@SuppressWarnings("unchecked")
+	BiConsumer<Integer, Integer> mockSliceAction() {
+		return mock(BiConsumer.class);
+	}
+
+	@Test
+	void applyToWithLargeBeanDefinitionsCreatesSlices() {
+		BeanRegistrationsAotContribution contribution = createContribution(1001, i -> "testBean" + i);
+		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
+		compile((consumer, compiled) -> {
+			assertThat(compiled.getSourceFile(".*BeanFactoryRegistrations"))
+					.contains("Register the bean definitions from 0 to 999.",
+							"Register the bean definitions from 1000 to 1000.",
+							"// Registration is sliced to avoid exceeding size limit");
+			DefaultListableBeanFactory freshBeanFactory = new DefaultListableBeanFactory();
+			consumer.accept(freshBeanFactory);
+			for (int i = 0; i < 1001; i++) {
+				String beanName = "testBean" + i;
+				assertThat(freshBeanFactory.containsBeanDefinition(beanName)).isTrue();
+				assertThat(freshBeanFactory.getBean(beanName)).isInstanceOf(TestBean.class);
+			}
+			assertThat(freshBeanFactory.getBeansOfType(TestBean.class)).hasSize(1001);
+		});
+	}
+
+	@Test
+	void applyToWithVeryLargeBeanDefinitionsCreatesSeparateSourceFiles() {
+		BeanRegistrationsAotContribution contribution = createContribution(10001, i -> "testBean" + i);
+		contribution.applyTo(this.generationContext, this.beanFactoryInitializationCode);
+		compile((consumer, compiled) -> {
+			assertThat(compiled.getSourceFile(".*BeanFactoryRegistrations1"))
+					.contains("Register the bean definitions from 0 to 999.",
+							"Register the bean definitions from 1000 to 1999.",
+							"Register the bean definitions from 2000 to 2999.",
+							"Register the bean definitions from 3000 to 3999.",
+							"Register the bean definitions from 4000 to 4999.",
+							"// Registration is sliced to avoid exceeding size limit");
+			assertThat(compiled.getSourceFile(".*BeanFactoryRegistrations2"))
+					.contains("Register the bean definitions from 5000 to 5999.",
+							"Register the bean definitions from 6000 to 6999.",
+							"Register the bean definitions from 7000 to 7999.",
+							"Register the bean definitions from 8000 to 8999.",
+							"Register the bean definitions from 9000 to 9999.",
+							"// Registration is sliced to avoid exceeding size limit");
+			assertThat(compiled.getSourceFile(".*BeanFactoryRegistrations3"))
+					.doesNotContain("// Registration is sliced to avoid exceeding size limit");
+			DefaultListableBeanFactory freshBeanFactory = new DefaultListableBeanFactory();
+			consumer.accept(freshBeanFactory);
+			for (int i = 0; i < 10001; i++) {
+				String beanName = "testBean" + i;
+				assertThat(freshBeanFactory.containsBeanDefinition(beanName)).isTrue();
+				assertThat(freshBeanFactory.getBean(beanName)).isInstanceOf(TestBean.class);
+			}
+			assertThat(freshBeanFactory.getBeansOfType(TestBean.class)).hasSize(10001);
+		});
+	}
+
+	private BeanRegistrationsAotContribution createContribution(int size, Function<Integer, String> beanNameFactory) {
+		List<Registration> registrations = new ArrayList<>();
+		for (int i = 0; i < size; i++) {
+			String beanName = beanNameFactory.apply(i);
+			RootBeanDefinition beanDefinition = new RootBeanDefinition(TestBean.class);
+			this.beanFactory.registerBeanDefinition(beanName, beanDefinition);
+			RegisteredBean registeredBean = RegisteredBean.of(this.beanFactory, beanName);
+			BeanDefinitionMethodGenerator methodGenerator = new BeanDefinitionMethodGenerator(
+					this.methodGeneratorFactory, registeredBean, null, List.of());
+			registrations.add(new Registration(registeredBean, methodGenerator, new String[0]));
+		}
+		return new BeanRegistrationsAotContribution(registrations);
 	}
 
 	private RegisteredBean registerBean(RootBeanDefinition rootBeanDefinition) {
@@ -160,12 +336,9 @@ class BeanRegistrationsAotContributionTests {
 	}
 
 	@SuppressWarnings({ "unchecked", "cast" })
-	private void compile(
-			BiConsumer<Consumer<DefaultListableBeanFactory>, Compiled> result) {
-		MethodReference beanRegistrationsMethodReference = this.beanFactoryInitializationCode
-				.getInitializers().get(0);
-		MethodReference aliasesMethodReference = this.beanFactoryInitializationCode
-				.getInitializers().get(1);
+	private void compile(BiConsumer<Consumer<DefaultListableBeanFactory>, Compiled> result) {
+		MethodReference beanRegistrationsMethodReference = this.beanFactoryInitializationCode.getInitializers().get(0);
+		MethodReference aliasesMethodReference = this.beanFactoryInitializationCode.getInitializers().get(1);
 		this.beanFactoryInitializationCode.getTypeBuilder().set(type -> {
 			ArgumentCodeGenerator beanFactory = ArgumentCodeGenerator.of(DefaultListableBeanFactory.class, "beanFactory");
 			ClassName className = this.beanFactoryInitializationCode.getClassName();
@@ -173,7 +346,8 @@ class BeanRegistrationsAotContributionTests {
 			CodeBlock aliasesMethodInvocation = aliasesMethodReference.toInvokeCodeBlock(beanFactory, className);
 			type.addModifiers(Modifier.PUBLIC);
 			type.addSuperinterface(ParameterizedTypeName.get(Consumer.class, DefaultListableBeanFactory.class));
-			type.addMethod(MethodSpec.methodBuilder("accept").addModifiers(Modifier.PUBLIC)
+			type.addMethod(MethodSpec.methodBuilder("accept")
+					.addModifiers(Modifier.PUBLIC)
 					.addParameter(DefaultListableBeanFactory.class, "beanFactory")
 					.addStatement(beanRegistrationsMethodInvocation)
 					.addStatement(aliasesMethodInvocation)
@@ -184,9 +358,10 @@ class BeanRegistrationsAotContributionTests {
 				result.accept(compiled.getInstance(Consumer.class), compiled));
 	}
 
-	private BeanRegistrationsAotContribution createContribution(
+	private BeanRegistrationsAotContribution createContribution(RegisteredBean registeredBean,
 			BeanDefinitionMethodGenerator methodGenerator,String... aliases) {
-		return new BeanRegistrationsAotContribution(Map.of("testBean", new Registration(methodGenerator, aliases)));
+		return new BeanRegistrationsAotContribution(
+			List.of(new Registration(registeredBean, methodGenerator, aliases)));
 	}
 
 }
