@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,11 +20,14 @@ import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.time.Duration;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import tools.jackson.databind.SerializationFeature;
+import tools.jackson.databind.json.JsonMapper;
 
-import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
+import org.springframework.http.converter.json.JacksonJsonHttpMessageConverter;
 import org.springframework.web.servlet.ModelAndView;
 import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
 import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
@@ -32,20 +35,24 @@ import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
+ * Tests for {@link ServerResponse.SseBuilder}.
+ *
  * @author Arjen Poutsma
+ * @author Sebastien Deleuze
+ * @author Brian Clozel
  */
 class SseServerResponseTests {
 
-	private MockHttpServletRequest mockRequest;
+	private final MockHttpServletRequest mockRequest = new MockHttpServletRequest("GET", "https://example.com");
 
-	private MockHttpServletResponse mockResponse;
+	private final MockHttpServletResponse mockResponse = new MockHttpServletResponse();
+
 
 	@BeforeEach
 	void setUp() {
-		this.mockRequest = new MockHttpServletRequest("GET", "https://example.com");
 		this.mockRequest.setAsyncSupported(true);
-		this.mockResponse = new MockHttpServletResponse();
 	}
+
 
 	@Test
 	void sendString() throws Exception {
@@ -80,12 +87,41 @@ class SseServerResponseTests {
 			}
 		});
 
-		ServerResponse.Context context = () -> Collections.singletonList(new MappingJackson2HttpMessageConverter());
+		ServerResponse.Context context = () -> List.of(new JacksonJsonHttpMessageConverter());
 
 		ModelAndView mav = response.writeTo(this.mockRequest, this.mockResponse, context);
 		assertThat(mav).isNull();
 
 		String expected = "data:{\"name\":\"John Doe\",\"age\":42}\n\n";
+		assertThat(this.mockResponse.getContentAsString()).isEqualTo(expected);
+	}
+
+	@Test
+	void sendObjectWithPrettyPrint() throws Exception {
+		Person person = new Person("John Doe", 42);
+		ServerResponse response = ServerResponse.sse(sse -> {
+			try {
+				sse.send(person);
+			}
+			catch (IOException ex) {
+				throw new UncheckedIOException(ex);
+			}
+		});
+
+		JsonMapper jsonMapper = JsonMapper.builder().enable(SerializationFeature.INDENT_OUTPUT).build();
+		JacksonJsonHttpMessageConverter converter = new JacksonJsonHttpMessageConverter(jsonMapper);
+		ServerResponse.Context context = () -> List.of(converter);
+
+		ModelAndView mav = response.writeTo(this.mockRequest, this.mockResponse, context);
+		assertThat(mav).isNull();
+
+		String expected = """
+				data:{
+				data:  "name" : "John Doe",
+				data:  "age" : 42
+				data:}
+
+				""";
 		assertThat(this.mockResponse.getContentAsString()).isEqualTo(expected);
 	}
 
@@ -109,12 +145,55 @@ class SseServerResponseTests {
 		ModelAndView mav = response.writeTo(this.mockRequest, this.mockResponse, context);
 		assertThat(mav).isNull();
 
-		String expected = "id:id\n" +
-				"event:name\n" +
-				":comment line 1\n" +
-				":comment line 2\n" +
-				"retry:1000\n" +
-				"data:data\n\n";
+		String expected = """
+				id:id
+				event:name
+				:comment line 1
+				:comment line 2
+				retry:1000
+				data:data
+
+				""";
+		assertThat(this.mockResponse.getContentAsString()).isEqualTo(expected);
+	}
+
+	@Test
+	void sendWithoutData() throws Exception {
+		ServerResponse response = ServerResponse.sse(sse -> {
+			try {
+				sse.event("custom").send();
+			}
+			catch (IOException ex) {
+				throw new UncheckedIOException(ex);
+			}
+		});
+
+		ServerResponse.Context context = Collections::emptyList;
+
+		ModelAndView mav = response.writeTo(this.mockRequest, this.mockResponse, context);
+		assertThat(mav).isNull();
+
+		String expected = "event:custom\n\n";
+		assertThat(this.mockResponse.getContentAsString()).isEqualTo(expected);
+	}
+
+	@Test // gh-34608
+	void sendHeartbeat() throws Exception {
+		ServerResponse response = ServerResponse.sse(sse -> {
+			try {
+				sse.comment("").send();
+			}
+			catch (IOException ex) {
+				throw new UncheckedIOException(ex);
+			}
+		});
+
+		ServerResponse.Context context = Collections::emptyList;
+
+		ModelAndView mav = response.writeTo(this.mockRequest, this.mockResponse, context);
+		assertThat(mav).isNull();
+
+		String expected = ":\n\n";
 		assertThat(this.mockResponse.getContentAsString()).isEqualTo(expected);
 	}
 
